--- a/land-area-converter/index.html
+++ b/land-area-converter/index.html
@@ -89,18 +89,6 @@
     </nav>
     <div class="container">
         <h1>Land Area Converter - Convert Ropani, Aana, Dhur</h1>
-        <p>Quickly convert land measurement units like Ropani, Aana, and Dhur to Square Meters, Acres, and more.</p>
-
-        <h2>How to Use the Land Area Converter?</h2>
-        <p>Simply select the unit and enter the area value in the respective field, and the converter will provide accurate results.</p>
-
-        <h3>Common Land Measurement Units in Nepal</h3>
-        <ul>
-            <li>1 Ropani = 16 Aana</li>
-            <li>1 Aana = 342.25 Sq. Feet</li>
-            <li>1 Bigaha = 6,772.63 Sq. Meters</li>
-        </ul>
-        <button onclick="location.href='/land-area-converter/faq.html'" class="faq-button">FAQ</button>
 
        
         <div class="input-group">
@@ -159,6 +147,22 @@
             </div>
             <div id="error-message" class="error-message"></div>
         </div>
+
+<p>Quickly convert land measurement units like Ropani, Aana, and Dhur to Square Meters, Acres, and more.</p>
+
+        <h2>How to Use the Land Area Converter?</h2>
+        <p>Simply select the unit and enter the area value in the respective field, and the converter will provide accurate results.</p>
+
+        <h3>Common Land Measurement Units in Nepal</h3>
+        <ul>
+            <li>1 Ropani = 16 Aana</li>
+            <li>1 Aana = 342.25 Sq. Feet</li>
+            <li>1 Bigaha = 6,772.63 Sq. Meters</li>
+        </ul>
+        <button onclick="location.href='/land-area-converter/faq.html'" class="faq-button">FAQ</button>
+<button onclick="location.href='/land-area-converter/addsubtractlandarea.html'" class="faq-button">जग्गाको क्षेत्रफल जोड्ने वा घटाउने
+
+</button>
     </div>
 
     <script>
