--- a/land-area-converter/addsubtractlandarea.html
+++ b/land-area-converter/addsubtractlandarea.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nepali Land Area Addition or Subtraction Calculator</title>
-    <meta name="description" content="Calculate land area in Nepal with our easy-to-use tool for Ropani, Aana, Paisa, Daam, Bigaha, Kaththa, and Dhur. Add or subtract measurements accurately.">
-    <meta name="keywords" content="Nepali land area calculator, Ropani to Bigaha, Aana to Kaththa, land measurement Nepal, add subtract land area, Nepali land conversion">
+    <meta name="description" content="Calculate land area in Nepal with our easy-to-use tool for Ropani, Aana, Paisa, Daam, Bigha, Kaththa, and Dhur. Add or subtract measurements accurately.">
+    <meta name="keywords" content="Nepali land area calculator, Ropani to Bigha, Aana to Kaththa, land measurement Nepal, add subtract land area, Nepali land conversion">
     <meta name="robots" content="index, follow">
     <meta name="author" content="Nepali Land Measurement Calculator">
     <meta property="og:title" content="Nepali Land Area Addition or Subtraction Calculator">
-    <meta property="og:description" content="Easily add or subtract land measurements in Nepal using Ropani, Aana, Paisa, Daam, Bigaha, Kaththa, and Dhur with our accurate calculator.">
+    <meta property="og:description" content="Easily add or subtract land measurements in Nepal using Ropani, Aana, Paisa, Daam, Bigha, Kaththa, and Dhur with our accurate calculator.">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://krishnaniraula.com.np/land-area-converter/addsubtractlandarea.html">
     <meta property="og:image" content="https://krishnaniraula.com.np/images/land-calculator.jpg">
@@ -79,7 +79,7 @@
         "@context": "https://schema.org",
         "@type": "WebApplication",
         "name": "Nepali Land Area Addition or Subtraction Calculator",
-        "description": "A tool to add or subtract land measurements in Nepal, supporting Ropani, Aana, Paisa, Daam, Bigaha, Kaththa, and Dhur.",
+        "description": "A tool to add or subtract land measurements in Nepal, supporting Ropani, Aana, Paisa, Daam, Bigha, Kaththa, and Dhur.",
         "url": "https://yourwebsite.com/nepali-land-area-calculator",
         "applicationCategory": "Utility",
         "operatingSystem": "Web"
@@ -94,7 +94,7 @@
     <main class="container">
         <!-- Ropani-Aana-Paisa-Daam -->
         <section class="card" aria-labelledby="ropani-heading">
-            <h2 id="ropani-heading" class="text-xl font-semibold mb-4">रोपनी, आना, पैसा, दाम क्याल्कुलेटर</h2>
+            <h2 id="ropani-heading" class="text-xl font-semibold mb-4">रोपनी-आना-पैसा-दामको जोड घटाउ</h2>
             <div id="ropani-inputs">
                 <div class="input-group">
                     <select class="operation" aria-label="Operation for Ropani measurement">
@@ -113,29 +113,29 @@
             <div id="ropani-error" class="error hidden" aria-live="assertive"></div>
         </section>
 
-        <!-- Bigaha-Kaththa-Dhur -->
-        <section class="card" aria-labelledby="bigaha-heading">
-            <h2 id="bigaha-heading" class="text-xl font-semibold mb-4">बिघा, कठ्ठा, धुर क्याल्कुलेटर</h2>
-            <div id="bigaha-inputs">
+        <!-- Bigha-Kaththa-Dhur -->
+        <section class="card" aria-labelledby="bigha-heading">
+            <h2 id="bigha-heading" class="text-xl font-semibold mb-4">बिघा-कठ्ठा-धुरको जोड घटाउ</h2>
+            <div id="bigha-inputs">
                 <div class="input-group">
-                    <select class="operation" aria-label="Operation for Bigaha measurement">
+                    <select class="operation" aria-label="Operation for Bigha measurement">
                         <option value="add">Add</option>
                         <option value="subtract">Subtract</option>
                     </select>
-                    <input type="number" step="any" placeholder="Bigaha" min="0" class="bigaha" aria-label="Bigaha input">
+                    <input type="number" step="any" placeholder="Bigha" min="0" class="bigha" aria-label="Bigha input">
                     <input type="number" step="any" placeholder="Kaththa (0-19)" min="0" max="19" class="kaththa" aria-label="Kaththa input">
                     <input type="number" step="any" placeholder="Dhur (0-19)" min="0" max="19" class="dhur" ariaatentive-label="Dhur input">
                 </div>
             </div>
-            <button class="btn" onclick="addBigahaInput()" aria-label="Add another Bigaha input set">Add Another</button>
-            <button class="btn mt-2" onclick="calculateBigaha()" aria-label="Calculate total for Bigaha measurements">Calculate Total</button>
-            <div id="bigaha-result" class="result hidden" aria-live="polite"></div>
-            <div id="bigaha-error" class="error hidden" aria-live="assertive"></div>
+            <button class="btn" onclick="addBighaInput()" aria-label="Add another Bigha input set">Add Another</button>
+            <button class="btn mt-2" onclick="calculateBigha()" aria-label="Calculate total for Bigha measurements">Calculate Total</button>
+            <div id="bigha-result" class="result hidden" aria-live="polite"></div>
+            <div id="bigha-error" class="error hidden" aria-live="assertive"></div>
         </section>
 
         <!-- Mixed -->
         <section class="card" aria-labelledby="mixed-heading">
-            <h2 id="mixed-heading" class="text-xl font-semibold mb-4">मिश्रित: रोपनी-आना-पैसा-दाम र बिघा-कठ्ठा-धुर क्याल्कुलेटर</h2>
+            <h2 id="mixed-heading" class="text-xl font-semibold mb-4">मिश्रित: रोपनी-आना-पैसा-दाम र बिघा-कठ्ठा-धुरको जोड घटाउ</h2>
             <div id="mixed-ropani-inputs">
                 <div class="input-group">
                     <select class="operation" aria-label="Operation for Ropani measurement in mixed calculator">
@@ -149,18 +149,18 @@
                 </div>
             </div>
             <button class="btn" onclick="addMixedRopaniInput()" aria-label="Add another Ropani set for mixed calculator">Add Ropani Set</button>
-            <div id="mixed-bigaha-inputs" class="mt-4">
+            <div id="mixed-bigha-inputs" class="mt-4">
                 <div class="input-group">
-                    <select class="operation" aria-label="Operation for Bigaha measurement in mixed calculator">
+                    <select class="operation" aria-label="Operation for Bigha measurement in mixed calculator">
                         <option value="add">Add</option>
                         <option value="subtract">Subtract</option>
                     </select>
-                    <input type="number" step="any" placeholder="Bigaha" min="0" class="bigaha" aria-label="Bigaha input for mixed calculator">
+                    <input type="number" step="any" placeholder="Bigha" min="0" class="bigha" aria-label="Bigha input for mixed calculator">
                     <input type="number" step="any" placeholder="Kaththa (0-19)" min="0" max="19" class="kaththa" aria-label="Kaththa input for mixed calculator">
                     <input type="number" step="any" placeholder="Dhur (0-19)" min="0" max="19" class="dhur" aria-label="Dhur input for mixed calculator">
                 </div>
             </div>
-            <button class="btn mt-2" onclick="addMixedBigahaInput()" aria-label="Add another Bigaha set for mixed calculator">Add Bigaha Set</button>
+            <button class="btn mt-2" onclick="addMixedBighaInput()" aria-label="Add another Bigha set for mixed calculator">Add Bigha Set</button>
             <button class="btn mt-2" onclick="calculateMixed()" aria-label="Calculate total for mixed measurements">Calculate Total</button>
             <div id="mixed-result" class="result hidden" aria-live="polite"></div>
             <div id="mixed-error" class="error hidden" aria-live="assertive"></div>
@@ -177,11 +177,11 @@
         const PAISA_PER_AANA = 4;
         const DAAM_PER_PAISA = 4;
         const TOTAL_DAAM_PER_ROPANI = AANA_PER_ROPANI * PAISA_PER_AANA * DAAM_PER_PAISA; // 256 Daam per Ropani
-        const KATHTHA_PER_BIGAHA = 20;
+        const KATHTHA_PER_BIGHA = 20;
         const DHUR_PER_KATHTHA = 20;
-        const TOTAL_DHUR_PER_BIGAHA = KATHTHA_PER_BIGAHA * DHUR_PER_KATHTHA; // 400 Dhur per Bigaha
-        const BIGAHA_TO_ROPANI = 13312.64 / 1000; // 13.31264 Ropani per Bigaha
-        const DAAM_PER_DHUR = (BIGAHA_TO_ROPANI * TOTAL_DAAM_PER_ROPANI) / TOTAL_DHUR_PER_BIGAHA; // ~8.5280896 Daam per Dhur
+        const TOTAL_DHUR_PER_BIGHA = KATHTHA_PER_BIGHA * DHUR_PER_KATHTHA; // 400 Dhur per Bigha
+        const BIGHA_TO_ROPANI = 13312.64 / 1000; // 13.31264 Ropani per Bigha
+        const DAAM_PER_DHUR = (BIGHA_TO_ROPANI * TOTAL_DAAM_PER_ROPANI) / TOTAL_DHUR_PER_BIGHA; // ~8.5280896 Daam per Dhur
 
         // Convert Ropani-Aana-Paisa-Daam to Daam
         function ropaniToDaam(ropani, aana, paisa, daam) {
@@ -191,9 +191,9 @@
                    daam;
         }
 
-        // Convert Bigaha-Kaththa-Dhur to Daam
-        function bigahaToDaam(bigaha, kaththa, dhur) {
-            const totalDhur = (bigaha * TOTAL_DHUR_PER_BIGAHA) +
+        // Convert Bigha-Kaththa-Dhur to Daam
+        function bighaToDaam(bigha, kaththa, dhur) {
+            const totalDhur = (bigha * TOTAL_DHUR_PER_BIGHA) +
                               (kaththa * DHUR_PER_KATHTHA) +
                               dhur;
             return totalDhur * DAAM_PER_DHUR;
@@ -215,17 +215,17 @@ PAISA_PER_AANA * DAAM_PER_PAISA));
             return { ropani, aana, paisa, daam, negative: false };
         }
 
-        // Normalize Daam to Bigaha-Kaththa-Dhur
-        function daamToBigaha(totalDaam) {
+        // Normalize Daam to Bigha-Kaththa-Dhur
+        function daamToBigha(totalDaam) {
             if (totalDaam < 0) {
-                return { bigaha: 0, kaththa: 0, dhur: 0, negative: true };
+                return { bigha: 0, kaththa: 0, dhur: 0, negative: true };
             }
             const totalDhur = totalDaam / DAAM_PER_DHUR;
-            const bigaha = Math.floor(totalDhur / TOTAL_DHUR_PER_BIGAHA);
-            const remainingDhur = totalDhur % TOTAL_DHUR_PER_BIGAHA;
+            const bigha = Math.floor(totalDhur / TOTAL_DHUR_PER_BIGHA);
+            const remainingDhur = totalDhur % TOTAL_DHUR_PER_BIGHA;
             const kaththa = Math.floor(remainingDhur / DHUR_PER_KATHTHA);
             const dhur = parseFloat((remainingDhur % DHUR_PER_KATHTHA).toFixed(2));
-            return { bigaha, kaththa, dhur, negative: false };
+            return { bigha, kaththa, dhur, negative: false };
         }
 
         // Add new input for Ropani
@@ -246,9 +246,9 @@ PAISA_PER_AANA * DAAM_PER_PAISA));
             container.appendChild(div);
         }
 
-        // Add new input for Bigaha
-        function addBigahaInput() {
-            const container = document.getElementById('bigaha-inputs');
+        // Add new input for Bigha
+        function addBighaInput() {
+            const container = document.getElementById('bigha-inputs');
             const div = document.createElement('div');
             div.className = 'input-group';
             div.innerHTML = `
@@ -256,7 +256,7 @@ PAISA_PER_AANA * DAAM_PER_PAISA));
                     <option value="add">Add</option>
                     <option value="subtract">Subtract</option>
                 </select>
-                <input type="number" step="any" placeholder="Bigaha" min="0" class="bigaha">
+                <input type="number" step="any" placeholder="Bigha" min="0" class="bigha">
                 <input type="number" step="any" placeholder="Kaththa (0-19)" min="0" max="19" class="kaththa">
                 <input type="number" step="any" placeholder="Dhur (0-19)" min="0" max="19" class="dhur">
             `;
@@ -281,9 +281,9 @@ PAISA_PER_AANA * DAAM_PER_PAISA));
             container.appendChild(div);
         }
 
-        // Add new input for Mixed Bigaha
-        function addMixedBigahaInput() {
-            const container = document.getElementById('mixed-bigaha-inputs');
+        // Add new input for Mixed Bigha
+        function addMixedBighaInput() {
+            const container = document.getElementById('mixed-bigha-inputs');
             const div = document.createElement('div');
             div.className = 'input-group';
             div.innerHTML = `
@@ -291,7 +291,7 @@ PAISA_PER_AANA * DAAM_PER_PAISA));
                     <option value="add">Add</option>
                     <option value="subtract">Subtract</option>
                 </select>
-                <input type="number" step="any" placeholder="Bigaha" min="0" class="bigaha">
+                <input type="number" step="any" placeholder="Bigha" min="0" class="bigha">
                 <input type="number" step="any" placeholder="Kaththa (0-19)" min="0" max="19" class="kaththa">
                 <input type="number" step="any" placeholder="Dhur (0-19)" min="0" max="19" class="dhur">
             `;
@@ -339,23 +339,23 @@ PAISA_PER_AANA * DAAM_PER_PAISA));
 
             errorDiv.classList.add('hidden');
             const ropaniResult = daamToRopani(totalDaam);
-            const bigahaResult = daamToBigaha(totalDaam);
+            const bighaResult = daamToBigha(totalDaam);
             resultDiv.innerHTML = `
                 Ropani-Aana-Paisa-Daam: ${ropaniResult.ropani} Ropani, ${ropaniResult.aana} Aana, ${ropaniResult.paisa} Paisa, ${ropaniResult.daam} Daam<br>
-                Bigaha-Kaththa-Dhur: ${bigahaResult.bigaha} Bigaha, ${bigahaResult.kaththa} Kaththa, ${bigahaResult.dhur} Dhur
+                Bigha-Kaththa-Dhur: ${bighaResult.bigha} Bigha, ${bighaResult.kaththa} Kaththa, ${bighaResult.dhur} Dhur
             `;
             resultDiv.classList.remove('hidden');
         }
 
-        // Calculate Bigaha-Kaththa-Dhur
-        function calculateBigaha() {
-            const inputs = document.querySelectorAll('#bigaha-inputs .input-group');
+        // Calculate Bigha-Kaththa-Dhur
+        function calculateBigha() {
+            const inputs = document.querySelectorAll('#bigha-inputs .input-group');
             let totalDaam = 0;
             let error = false;
 
             inputs.forEach(input => {
                 const operation = input.querySelector('.operation').value;
-                const bigaha = parseFloat(input.querySelector('.bigaha').value) || 0;
+                const bigha = parseFloat(input.querySelector('.bigha').value) || 0;
                 const kaththa = parseFloat(input.querySelector('.kaththa').value) || 0;
                 const dhur = parseFloat(input.querySelector('.dhur').value) || 0;
 
@@ -364,12 +364,12 @@ PAISA_PER_AANA * DAAM_PER_PAISA));
                     return;
                 }
 
-                const daamValue = bigahaToDaam(bigaha, kaththa, dhur);
+                const daamValue = bighaToDaam(bigha, kaththa, dhur);
                 totalDaam += (operation === 'add') ? daamValue : -daamValue;
             });
 
-            const resultDiv = document.getElementById('bigaha-result');
-            const errorDiv = document.getElementById('bigaha-error');
+            const resultDiv = document.getElementById('bigha-result');
+            const errorDiv = document.getElementById('bigha-error');
 
             if (error) {
                 errorDiv.textContent = 'Error: Kaththa (0-19), Dhur (0-19) limits exceeded.';
@@ -387,10 +387,10 @@ PAISA_PER_AANA * DAAM_PER_PAISA));
 
             errorDiv.classList.add('hidden');
             const ropaniResult = daamToRopani(totalDaam);
-            const bigahaResult = daamToBigaha(totalDaam);
+            const bighaResult = daamToBigha(totalDaam);
             resultDiv.innerHTML = `
                 Ropani-Aana-Paisa-Daam: ${ropaniResult.ropani} Ropani, ${ropaniResult.aana} Aana, ${ropaniResult.paisa} Paisa, ${ropaniResult.daam} Daam<br>
-                Bigaha-Kaththa-Dhur: ${bigahaResult.bigaha} Bigaha, ${bigahaResult.kaththa} Kaththa, ${bigahaResult.dhur} Dhur
+                Bigha-Kaththa-Dhur: ${bighaResult.bigha} Bigha, ${bighaResult.kaththa} Kaththa, ${bighaResult.dhur} Dhur
             `;
             resultDiv.classList.remove('hidden');
         }
@@ -398,7 +398,7 @@ PAISA_PER_AANA * DAAM_PER_PAISA));
         // Calculate Mixed
         function calculateMixed() {
             const ropaniInputs = document.querySelectorAll('#mixed-ropani-inputs .input-group');
-            const bigahaInputs = document.querySelectorAll('#mixed-bigaha-inputs .input-group');
+            const bighaInputs = document.querySelectorAll('#mixed-bigha-inputs .input-group');
             let totalDaam = 0;
             let error = false;
 
@@ -418,9 +418,9 @@ PAISA_PER_AANA * DAAM_PER_PAISA));
                 totalDaam += (operation === 'add') ? daamValue : -daamValue;
             });
 
-            bigahaInputs.forEach(input => {
+            bighaInputs.forEach(input => {
                 const operation = input.querySelector('.operation').value;
-                const bigaha = parseFloat(input.querySelector('.bigaha').value) || 0;
+                const bigha = parseFloat(input.querySelector('.bigha').value) || 0;
                 const kaththa = parseFloat(input.querySelector('.kaththa').value) || 0;
                 const dhur = parseFloat(input.querySelector('.dhur').value) || 0;
 
@@ -429,7 +429,7 @@ PAISA_PER_AANA * DAAM_PER_PAISA));
                     return;
                 }
 
-                const daamValue = bigahaToDaam(bigaha, kaththa, dhur);
+                const daamValue = bighaToDaam(bigha, kaththa, dhur);
                 totalDaam += (operation === 'add') ? daamValue : -daamValue;
             });
 
@@ -452,10 +452,10 @@ PAISA_PER_AANA * DAAM_PER_PAISA));
 
             errorDiv.classList.add('hidden');
             const ropaniResult = daamToRopani(totalDaam);
-            const bigahaResult = daamToBigaha(totalDaam);
+            const bighaResult = daamToBigha(totalDaam);
             resultDiv.innerHTML = `
                 Ropani-Aana-Paisa-Daam: ${ropaniResult.ropani} Ropani, ${ropaniResult.aana} Aana, ${ropaniResult.paisa} Paisa, ${ropaniResult.daam} Daam<br>
-                Bigaha-Kaththa-Dhur: ${bigahaResult.bigaha} Bigaha, ${bigahaResult.kaththa} Kaththa, ${bigahaResult.dhur} Dhur
+                Bigha-Kaththa-Dhur: ${bighaResult.bigha} Bigha, ${bighaResult.kaththa} Kaththa, ${bighaResult.dhur} Dhur
             `;
             resultDiv.classList.remove('hidden');
         }
