--- a/land-area-converter/addsubtractlandarea.html
+++ b/land-area-converter/addsubtractlandarea.html
@@ -80,7 +80,7 @@
         "@type": "WebApplication",
         "name": "Nepali Land Area Addition or Subtraction Calculator",
         "description": "A tool to add or subtract land measurements in Nepal, supporting Ropani, Aana, Paisa, Daam, Bigha, Kaththa, and Dhur.",
-        "url": "https://yourwebsite.com/nepali-land-area-calculator",
+        "url": "https://krishnaniraula.com.np/land-area-converter/addsubtractlandarea.html",
         "applicationCategory": "Utility",
         "operatingSystem": "Web"
     }
