--- a/index.html
+++ b/index.html
@@ -88,6 +88,8 @@
                                 <span class="parent-node">Land Area Converter</span>
                                 <ul>
 <li><a href="https://krishnaniraula.com.np/land-area-converter/">Land Area Converter</a></li>
+
+<li><a href="https://krishnaniraula.com.np/land-area-converter/addsubtractlandarea.html">Add or Subtract Land Area</a></li>
                                     <li><a href="https://krishnaniraula.com.np/land-area-converter/faq.html">FAQ</a></li>
                                 </ul>
                             </li>
