--- a/land-area-converter/addsubtractlandarea.html
+++ b/land-area-converter/addsubtractlandarea.html
@@ -22,6 +22,28 @@
             margin: 0;
             padding: 0;
         }
+.navbar {
+    background: #ffffff;
+    padding: 15px 30px;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+    position: sticky;
+    top: 0;
+    z-index: 1000;
+}
+
+.nav-link {
+    color: #3498db;
+    text-decoration: none;
+    font-weight: 600;
+    font-size: 1.1em;
+    transition: color 0.3s ease;
+}
+
+.nav-link:hover {
+    color: #2980b9;
+}
+
+
         .container {
             max-width: 100%;
             padding: 10px;
@@ -117,6 +139,9 @@
     </script>
 </head>
 <body>
+<nav class="navbar">
+        <a href="/" class="nav-link">Home</a>
+    </nav>
     <header>
         <h1 class="text-3xl font-bold mb-8 text-gray-800 main-title">Nepali Land Area Addition or Subtraction Calculator</h1>
         <h2 class="text-gray-600 sub-title">रोपनी-आना सँग रोपनी-आना, बिघा-कठ्ठा सँग बिघा-कठ्ठा वा रोपनी-आना सँग बिघा-कठ्ठा जोड्नु वा घटाउनुहोस्।</h2>
