--- a/land-area-converter/addsubtractlandarea.html
+++ b/land-area-converter/addsubtractlandarea.html
@@ -5,14 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>Nepali Land Area Addition or Subtraction Calculator</title>
     <meta name="description" content="Calculate land area in Nepal with our easy-to-use tool for Ropani, Aana, Paisa, Daam, Bigha, Kaththa, and Dhur. Add or subtract measurements accurately.">
-    <meta name="keywords" content="Nepali land area calculator, Ropani to Bigha, Aana to Kaththa, land measurement Nepal, add subtract land area, Nepali land conversion">
+    <meta name="keywords" content="nepali jagga ko jod ghatau,ropani aana jod ghatau, Ropani plus Bigha, Aana plus Kaththa, land measurement Nepal, add subtract land area">
     <meta name="robots" content="index, follow">
     <meta name="author" content="Nepali Land Measurement Calculator">
     <meta property="og:title" content="Nepali Land Area Addition or Subtraction Calculator">
     <meta property="og:description" content="Easily add or subtract land measurements in Nepal using Ropani, Aana, Paisa, Daam, Bigha, Kaththa, and Dhur with our accurate calculator.">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://krishnaniraula.com.np/land-area-converter/addsubtractlandarea.html">
-    <meta property="og:image" content="https://krishnaniraula.com.np/images/land-calculator.jpg">
+    <meta property="og:image" content="https://krishnaniraula.com.np/assets/images/jaggajodghatau.jpg">
     <link rel="canonical" href="https://krishnaniraula.com.np/land-area-converter/addsubtractlandarea.html">
     <link rel="stylesheet">
     <style>
